<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#ff0000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:textSize="20dp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:text="@string/playstyle_question_one_page_text"
        />

    <LinearLayout
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/strongly_agree"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#000000"
            android:textColor="#ff0000"
            android:text="@string/strongly_agree_button"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/agree"
            android:layout_width="175dp"
            android:layout_height="40dp"
            android:background="#000000"
            android:textColor="#ff0000"
            android:text="@string/agree_button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/neutral"
            android:layout_width="175dp"
            android:layout_height="40dp"
            android:background="#000000"
            android:textColor="#ff0000"
            android:text="@string/neutral_button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/disagree"
            android:layout_width="175dp"
            android:layout_height="40dp"
            android:background="#000000"
            android:textColor="#ff0000"
            android:text="@string/disagree_button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/strongly_disagree"
            android:layout_width="175dp"
            android:layout_height="40dp"
            android:background="#000000"
            android:textColor="#ff0000"
            android:text="@string/strongly_disagree_button"/>
    </LinearLayout>
</LinearLayout>