<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#ff0000"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textAlignment="center"
        android:text="@string/damage_heal_break"
        />

    <LinearLayout
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/damage"
            android:layout_width="175dp"
            android:layout_height="40dp"
            android:background="#000000"
            android:textColor="#ff0000"
            android:text="@string/damage_button"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/heal"
            android:layout_width="175dp"
            android:layout_height="40dp"
            android:background="#000000"
            android:textColor="#ff0000"
            android:text="@string/heal_button"/>
    </LinearLayout>

</LinearLayout>