<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#0000ff"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:textSize="20dp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:text="@string/elf_break_text"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/yesHuman"
            android:layout_width="175dp"
            android:layout_height="40dp"
            android:background="#000000"
            android:textColor="#0000ff"
            android:text="@string/yes_button"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/noHuman"
            android:layout_width="175dp"
            android:layout_height="40dp"
            android:background="#000000"
            android:textColor="#0000ff"
            android:text="@string/no_button"/>
    </LinearLayout>

</LinearLayout>